--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "cross-fetch": "^3.0.6",
     "next": "10.0.1",
+    "next-on-netlify": "^2.6.3",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   }
